--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
-  "name": "brain-games-soixiio",
+  "name": "brain-games-soixiio", 
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "",
+  "bin": {
+    "brain-games": "dist/bin/brain-games.js"
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "console-games"
   ],
-  "author": "",
-  "license": "ISC"
+  "author": "Nata Lebedeva",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.4"
+  }
 }
