--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brain-games-soixiio",
   "version": "1.1.0",
-  "description": "",
+  "description": "Console brain game",
   "main": "",
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
@@ -10,11 +10,11 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
+    "games",
     "console-games"
   ],
   "author": "Nata Lebedeva",
