--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "brain-games-soixiio",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Console brain game",
   "main": "",
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
     "dist"
