--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "brain-games-soixiio",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Console brain game",
   "main": "",
   "bin": {
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "files": [
     "dist"
