--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "brain-games-soixiio",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "Console brain game",
   "main": "",
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "files": [
     "dist"
