--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "brain-games-soixiio",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "Console brain game",
   "main": "",
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-progression": "dist/bin/brain-progression.js"
   },
   "files": [
     "dist"
